# PaidSearchNav-MCP

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SETUP_COMPLETE.md  claude-review.sh  claude-settings-example.json  docker-compose.yml  import_fix_report.txt  pyproject.toml  ruff.toml  test_puttery_connection.py
.github/workflows/: ci.yml
archive/: README.md
archive/old_configs/: .pre-commit-config.yaml  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml
archive/old_docs/: ANALYZER_TEST_REPORT.md  API_GUIDE.md  ARCHITECTURE.md  AWS_ARCHITECTURE.md  BACKLOG_GROOMING_SUMMARY.md  BIGQUERY_CONNECTION_GUIDE.md  BIGQUERY_COST_TRACKING_STRATEGIES.md  BIGQUERY_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DEVELOPER_ADVICE.md  DIRECTORY_ORGANIZATION_SUMMARY.md  ENVIRONMENT_SETUP_GUIDE.md  GUIDANCE.md  (+15 more)
docs/: BIGQUERY_EXAMPLES.md  BIGQUERY_SETUP.md  CUSTOMER_ONBOARDING.md  GOOGLE_ADS_SETUP.md  QUARTERLY_AUDIT_GUIDE.md  SKILL_CATALOG.md  SKILL_DEVELOPMENT_GUIDE.md  SKILL_TESTING_GUIDE.md  skill_conversion_lessons.md
scripts/: debug_campaign_filter.py  package_all_skills.sh  package_skill.py  test_orchestration_direct.py  test_orchestration_integration.py  test_orchestration_tools.py
sql/: create_customer_registry.sql
tests/: __init__.py  conftest.py  test_analyzers.py  test_bigquery_client.py  test_customer_registry.py  test_google_ads_client.py  test_keyword_match_skill.py  test_mcp_tools.py  test_orchestration_tools.py  test_server.py
(+936 files in other folders)
