[project]
name = "paidsearchnav-mcp"
version = "1.0.0"
description = "MCP server for PaidSearchNav Google Ads data access"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "google-ads>=22.0.0",
    "google-cloud-bigquery>=3.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "tenacity>=8.0.0",
    "pandas>=2.0.0",
    "circuitbreaker>=2.0.0",
    "croniter>=2.0.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
